--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #1d5888;
+    --primary-color: #56161f;
     --secondary-color: crimson;
     --dark-color: #292929;
     --white-color: #e7e7e7;
@@ -8,16 +8,26 @@
 
 body {
     color: var(--dark-color);
+    background-color: #ffecd5;
+}
+
+#btnSubmit{
+    background-color: #56161f;
+}
+
+#btnTry{
+    background-color: #56161f;
+    color: #e7e7e7;
 }
 
 nav {
-    background-color: var(--dark-color);
+    background-color: var(--primary-color);
 
 }
 
 
 footer {
-    background-color: var(--dark-color);
+    background-color: var(--primary-color);
 
 }
 
@@ -40,7 +50,7 @@ h1,h2,h3,h4,h5,h6 {
     color: rgb(11, 82, 214);
 }
 .checklist >li i{
-    color: var(--secondary-color)
+    color: var(--primary-color)
 }
 
 
